# NatureRemoMatterControl

./: .gitignore  ECHONETLiteProperty.toml  ECHONETLiteProperty.yaml  NatureRemoMatterControl.code-workspace  README.md  config.ini.template  control.py  install.bat  logging_config.py  main.py  monitoring.py  pyproject.toml  requirements.txt  start.bat  start.ps1  test_control.py  test_monitoring.py
config/: config.ini  config.ini.template
docs/: README.md  error_fix_plan.md  loguru_migration_plan.md  uv_migration_plan.md
nature-remo-con/: main.py
nature-remo-cont/: connectivity_checker.py  main.py
nature-remo-cont/control/: kasa.py
nature-remo-cont/monitorring/: nature_api.py
nature_remo_con/: logging_config.py  main.py
nature_remo_con/control/: python_kasa.py
nature_remo_con/monitoring/: nature_api.py
src/NatureRemoMatterControl/: connectivity_checker.py  exceptions.py  logging_config.py  main.py
src/NatureRemoMatterControl/control_python_kasa/: control.py
src/NatureRemoMatterControl/monitorring_nature_api/: monitoring.py
src/nature_remo_con/: connectivity_checker.py  logging_config.py  main.py
src/nature_remo_con/control/: python_kasa.py
src/nature_remo_con/monitoring/: nature_api.py
test/: test_connectivity_checker.py  test_control.py  test_main.py  test_monitoring.py
tests/: test_connectivity_checker.py  test_control.py  test_main.py  test_monitoring.py
おまけ/: ls-files.ps1  monitoring_all.py
