[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "NatureRemoMatterControl"
version = "0.1.0"
description = "Nature Remo E で潮流を監視して TP-Link スマートプラグを制御する"
requires-python = ">=3.12.4"
dependencies = ["pytest>=8.3.3"]

# 追加: 開発環境情報
classifiers = ["Operating System :: Microsoft :: Windows :: Windows 11"]

[tool.pytest.ini_options]
addopts = "-ra -q -v"
testpaths = ["test"]
pythonpath = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "pytest-cov>=5.0.0"]
