[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nature_remo_con"]

[project]
name = "nature-remo-con"
version = "0.1.0"
description = "Nature Remo E で潮流を監視して TP-Link スマートプラグを制御する"
requires-python = ">=3.12.4"
dependencies = ["python-kasa", "requests", "toml", "netifaces"]

# 追加: 開発環境情報
classifiers = ["Operating System :: Microsoft :: Windows :: Windows 11"]

[tool.pytest.ini_options]
addopts = "-ra -q -v"
testpaths = ["test"]
pythonpath = ["nature_remo_con"]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "pytest-cov>=5.0.0", "pytest-asyncio>=0.24.0"]

# 追加: エントリーポイント
[project.scripts]
nature-remo-con = "nature_remo_con.main:cli" # 直接main.pyを実行するのではなく、CLIを実行するでないと ` asyncio.run()` が実行されない
